--- a/index.html
+++ b/index.html
@@ -362,14 +362,35 @@
         return lengthValid && matchValid;
       }
 
-      // Update password with Supabase
-      async function updatePassword(accessToken, password) {
-        // Get Supabase URL from environment or hardcode
+      // Update password with Supabase (for invited users)
+      async function acceptInviteAndSetPassword(accessToken, password) {
         const SUPABASE_URL = "https://jlmjhcwmvpxvmuppzdks.supabase.co";
         const SUPABASE_ANON_KEY =
           "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImpsbWpoY3dtdnB4dm11cHB6ZGtzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzA4MDUwNjQsImV4cCI6MjA0NjM4MTA2NH0.QgYN5Lg0FZS1q5JGLLwdH3fS5m3Fj3yAm31DgvHG2AQ";
 
-        const response = await fetch(`${SUPABASE_URL}/auth/v1/user`, {
+        console.log("Setting password for invited user...");
+
+        // First, verify the invite token by getting user info
+        const verifyResponse = await fetch(`${SUPABASE_URL}/auth/v1/user`, {
+          method: "GET",
+          headers: {
+            "Content-Type": "application/json",
+            Authorization: `Bearer ${accessToken}`,
+            apikey: SUPABASE_ANON_KEY,
+          },
+        });
+
+        if (!verifyResponse.ok) {
+          const error = await verifyResponse.json();
+          console.error("Verify token error:", error);
+          throw new Error("Token không hợp lệ hoặc đã hết hạn");
+        }
+
+        const userData = await verifyResponse.json();
+        console.log("User verified:", userData);
+
+        // Now update the password
+        const updateResponse = await fetch(`${SUPABASE_URL}/auth/v1/user`, {
           method: "PUT",
           headers: {
             "Content-Type": "application/json",
@@ -381,25 +402,38 @@
           }),
         });
 
-        if (!response.ok) {
-          const error = await response.json();
-          throw new Error(error.msg || "Không thể cập nhật mật khẩu");
+        if (!updateResponse.ok) {
+          const error = await updateResponse.json();
+          console.error("Update password error:", error);
+          throw new Error(error.msg || error.message || "Không thể cập nhật mật khẩu");
         }
 
-        return await response.json();
+        const result = await updateResponse.json();
+        console.log("Password updated successfully:", result);
+        
+        return {
+          user: result.user || userData,
+          session: result,
+        };
       }
 
       // Open app with deep link
       function openApp(accessToken, refreshToken) {
-        const deepLink = `educareconnect://auth?access_token=${accessToken}&refresh_token=${refreshToken}&type=invite`;
+        // Build deep link with available tokens
+        let deepLink = `educareconnect://auth?access_token=${accessToken}&type=invite`;
+        if (refreshToken) {
+          deepLink += `&refresh_token=${refreshToken}`;
+        }
+
+        console.log("Opening app with deep link:", deepLink);
 
         // Try to open the app
         window.location.href = deepLink;
 
         // Fallback: Show manual instruction after 3 seconds
         setTimeout(() => {
-          // Still on this page means app didn't open
           console.log("App might not be installed or failed to open");
+          // You could show a message here with download links
         }, 3000);
       }
 
